Configurando rotas do swagger
