# config/swaggerDoc/swagger.json
@@ -12,7 +12,7 @@
   
   
     "host" : "localhost:3030",
-    "basePath" : "/api",
+    "basePath" : "/",
     "tags" : [ {
       "name" : "Login",
       "description" : "API for users login in the system"
@@ -34,22 +34,108 @@
             "description" : "User that we want to authenticate",
             "required" : true,
             "schema" : {
-              "$ref" : "#/definitions/User"
+              "$ref" : "#/definitions/Login"
             }
           } ],
           "responses" : {
-            "201" : {
+            "200" : {
+              "description" : "Login OK",
               "schema" : {
-                "$ref" : "#/definitions/User"
+                "$ref" : "#/definitions/Response"
               }
             }
           }
         }
       },
-      "/register" : {
+
+      "/forgot-password" : {
         "post" : {
           "type": "object",
           "tags" : [ "Login" ],
+          "summary" : "Recover user password in the system",
+          "produces" : [ "application/json" ],
+          "parameters" : [ {
+            "in" : "body",
+            "name" : "Email user",
+            "description" : "User that wants to recover the password",
+            "required" : true,
+            "schema" : {
+                "$ref" : "#/definitions/Request - Forgot Password"
+              }
+          } ],
+          "responses" : {
+            "200" : {
+              "description" : "Um email foi enviado para User com mais instruções."
+            },
+            "400" : {
+                "description": "Não existe uma conta com o endereço de e-mail inserido."
+            }
+          }
+        }
+      },
+      
+      "/reset/:token" : {
+        "post" : {
+          "type": "string",
+          "tags" : [ "Login" ],
+          "summary" : "Reset user password in the system",
+          "produces" : [ "application/json" ],
+          "parameters" : [ {
+            "in" : "body",
+            "name" : "Password",
+            "description" : "User that wants to reset the password",
+            "required" : true,
+            "schema" : {
+                "$ref" : "#/definitions/Request - Reset Password"
+              }
+          } ],
+          "responses" : {
+            "200" : {
+              "description" : "A senha foi alterada."
+            },
+            "400" : {
+                "description" : "Token de recuperação de senha expirado ou inválido."
+            }
+          }
+        }
+      },
+
+      "/password/:id" : {
+        "put" : {
+          "type": "string",
+          "tags" : [ "Login" ],
+          "summary" : "Update user password in the system",
+          "produces" : [ "application/json" ],
+          "parameters" : [ {
+            "in" : "body",
+            "name" : "Old Password and New Password",
+            "description" : "User that wants to update the password",
+            "required" : true,
+            "schema" : {
+                "$ref" : "#/definitions/Request - Update Password"
+              }
+          } ],
+          "responses" : {
+            "201" : {
+              "description" : "A senha foi alterada com sucesso."
+            },
+            "400" : {
+                "description" : "A senha não foi alterada. Você deve informar corretamente a senha anterior."
+            },
+            "404" : {
+                "description" : "Usuário não encontrado." 
+            },
+            "500" : {
+                "description" : "Internal Server Error!" 
+            }
+          }
+        }
+      },
+
+      "/register" : {
+        "post" : {
+          "type": "object",
+          "tags" : [ "User" ],
           "summary" : "Register a user in the system",
           "produces" : [ "application/json" ],
           "parameters" : [ {
@@ -62,11 +148,14 @@
             }
           } ],
           "responses" : {
-            "201" : {
+            "200" : {
               "description" : "user successfully registered",
               "schema" : {
-                "$ref" : "#/definitions/Register - RESPONSE"
+                "$ref" : "#/definitions/Response"
               }
+            },
+            "400" : {
+                "description": "Usuário já existe."
             }
           }
         }
@@ -74,7 +163,7 @@
     },
 
     "definitions" : {
-      "Register" : {
+        "Register" : {
         "required" : [ "name", "email", "password", "type" ],
         "properties" : {
           "name" : {
@@ -96,9 +185,24 @@
           "password": "user123",
           "type" : "CLIENT"
         }
-      }, 
+        }, 
 
-      "Register - RESPONSE" : {
+        "Login" : {
+        "properties" : {
+            "email" : {
+              "type" : "string"
+            },
+            "password" : {
+              "type" : "string"
+            }
+          },
+          "example" : {
+            "email" : "user@email.com",
+            "password" : "user123"
+          }
+        },
+
+        "Response" : {
         "properties" : {
           "name" : {
             "type" : "string"
@@ -123,7 +227,47 @@
           },
           "token": "string"
         }
-      }
+        },
 
-  }
+        "Request - Forgot Password" : {
+            "properties" : {
+                "email" : {
+                    "type" : "string"
+                }
+            },
+
+            "example" : {
+                "email" : "user@email.com"
+            }
+        },
+
+        "Request - Reset Password" : {
+            "properties" : {
+                "password" : {
+                    "type" : "string"
+                }
+            },
+
+            "example" : {
+                "password" : "user123#$"
+            }
+        },
+
+        "Request - Update Password" : {
+            "properties" : {
+                "oldPassword" : {
+                    "type" : "string"
+                },
+
+                "newPassword" : {
+                    "type" : "string"
+                }
+            },
+
+            "example" : {
+                "oldPassword" : "user123",
+                "newPassword" : "user123#$"
+            }
+        }
+    }
 }
