# src/login/routes.js
@@ -4,7 +4,7 @@ const authController = require('./controller');
 
 router.post('/login', authController.authenticate);
 router.post('/register', authController.register);
-router.post('/forgot', authController.forgot_password);
+router.post('/forgot-password', authController.forgot_password);
 router.post('/reset/:token', authController.reset_password);
 router.put('/password/:id', authController.update_password);
 
